--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -1,79 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="assets/js/jquery/jquery.min.js"></script>
-    <script src="assets/js/checkuser.js"></script>
-    <title>Register/Login Form</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/login.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="main">
-      <input type="checkbox" id="chk" aria-hidden="true" />
-      <div class="login">
-        <form name="login" id="login">
-          <label for="chk" aria-hidden="true">Login</label>
-          <input
-            type="text"
-            name="name"
-            id="lname"
-            placeholder="Username"
-            required
-          />
-          <input
-            type="password"
-            id="lpassword"
-            name="password"
-            placeholder="Password"
-            required
-          />
-          <button type="submit" id="loginBtn">Login</button>
-          <p id="error1"></p>
-        </form>
-      </div>
-      <div class="signup">
-        <form name="register" id="register">
-          <label for="chk" aria-hidden="true">Sign up</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="User name"
-            required
-          />
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email"
-            required
-          />
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Password"
-            required
-          />
-          <input
-            type="password"
-            id="cpassword"
-            name="cpassword"
-            onfocusout="passwordCheck()"
-            placeholder="Confirm Password"
-            required
-          />
-          <button type="submit" id="registerBtn">Sign up</button>
-          <p id="error" style="color: red"></p>
-        </form>
-      </div>
-    </div>
-  </body>
-  <script src="assets/js/validator.js"></script>
+
+<head>
   <script src="assets/js/jquery/jquery.min.js"></script>
-  <script src="assets/js/login.js"></script>
+  <script src="assets/js/checkuser.js"></script>
+  <title>Register/Login Form</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/login.css" />
+  <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="main">
+    <input type="checkbox" id="chk" aria-hidden="true" />
+    <div class="login">
+      <form name="login" id="login">
+        <label for="chk" aria-hidden="true">Login</label>
+        <input type="text" name="name" id="lname" placeholder="Username" required />
+        <input type="password" id="lpassword" name="password" placeholder="Password" required />
+        <button type="submit" id="loginBtn">Login</button>
+        <p id="error1"></p>
+      </form>
+    </div>
+    <div class="signup">
+      <form name="register" id="register">
+        <label for="chk" aria-hidden="true">Sign up</label>
+        <input type="text" id="name" name="name" placeholder="User name" required />
+        <input type="email" id="email" name="email" placeholder="Email" required />
+        <input type="password" id="password" name="password" placeholder="Password" required />
+        <input type="password" id="cpassword" name="cpassword" onfocusout="passwordCheck()"
+          placeholder="Confirm Password" required />
+        <button type="submit" id="registerBtn">Sign up</button>
+        <p id="error" style="color: red"></p>
+      </form>
+    </div>
+  </div>
+</body>
+<script src="assets/js/validator.js"></script>
+<script src="assets/js/jquery/jquery.min.js"></script>
+<script src="assets/js/login.js"></script>
+
 </html>
