--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -22,6 +22,19 @@ body {
   font-size: var(--normal-font-size);
   transition: 0.5s;
 }
+
+.btn-primary {
+  background-color: var(--first-color) !important;
+}
+.pagination > li.active > a,
+.pagination > li.active > span {
+  background-color: var(--first-color) !important;
+}
+
+.form-text {
+  color: #ff0000 !important;
+}
+
 a {
   text-decoration: none;
 }
@@ -88,91 +101,7 @@ a {
 .nav_logo,
 .nav_link {
   display: grid;
-  grid-template-columns: max-content max-content;
-  align-items: center;
-  column-gap: 1rem;
-  padding: 0.5rem 0 0.5rem 1.5rem;
-}
-.nav_logo {
-  margin-bottom: 2rem;
-}
-.nav_logo-icon {
-  font-size: 1.25rem;
-  color: var(--white-color);
-}
-.nav_logo-name {
-  color: var(--white-color);
-  font-weight: 700;
-}
-.nav_link {
-  position: relative;
-  color: var(--first-color-light);
-  margin-bottom: 1.5rem;
-  transition: 0.3s;
-}
-.nav_link:hover {
-  color: var(--white-color);
-}
-.nav_icon {
-  font-size: 1.25rem;
-}
-.show {
-  left: 0;
-}
-.body-pd {
-  padding-left: calc(var(--nav-width) + 1rem);
-}
-.active {
-  color: var(--white-color);
-}
-.active::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 2px;
-  height: 32px;
-  background-color: var(--white-color);
-}
-.height-100 {
-  height: 100vh;
-}
-@media screen and (min-width: 768px) {
-  body {
-    margin: calc(var(--header-height) + 1rem) 0 0 0;
-    padding-left: calc(var(--nav-width) + 2rem);
-  }
-  .header {
-    height: calc(var(--header-height) + 1rem);
-    padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
-  }
-  .header_img {
-    width: 40px;
-    height: 40px;
-  }
-  .header_img img {
-    width: 45px;
-  }
-  .l-navbar {
-    left: 0;
-    padding: 1rem 1rem 0 0;
-  }
-  .show {
-    width: calc(var(--nav-width) + 156px);
-  }
-  .body-pd {
-    padding-left: calc(var(--nav-width) + 188px);
-  }
-}
-.nav {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-}
-.nav_logo,
-.nav_link {
-  display: grid;
+  text-decoration: none;
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: 1rem;
@@ -259,7 +188,7 @@ a {
 
 input[type="date"],
 .form-two {
-  width: 200px !important;
+  width: 200px;
 }
 
 .list-group {
@@ -269,7 +198,8 @@ input[type="date"],
   -webkit-overflow-scrolling: touch;
 }
 
-#projectsTable tr {
+#projectsTable tr,
+#tasksTable tr {
   cursor: pointer;
 }
 
