--- a/src/main/webapp/assets/css/toast.css
+++ b/src/main/webapp/assets/css/toast.css
@@ -1,7 +1,7 @@
 :root {
   --white: #fff;
   --green: #4caf50;
-  --blue: #2896f3;
+  --blue: #4723d9;
   --yellow: #fbc107;
   --red: #f55153;
   --transition-duration: 0.25s;
