--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -41,6 +41,10 @@ tr.strikeout td:before {
   width: 100%;
   border-bottom: 1px solid #000;
 }
+
+.projects {
+  text-align: left;
+}
 .no-strikeout {
   border: none !important;
 }
@@ -194,6 +198,11 @@ a {
   }
 }
 
+.profile_img > img {
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+}
 .nav-item {
   color: #fff;
 }
@@ -276,3 +285,35 @@ div#projectsTable_filter {
     text-align: center;
   }
 }
+/* DROPDOWN */
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content button {
+  color: black;
+  text-decoration: none;
+  display: block;
+  border: 0;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content button:hover {background-color: #f1f1f1; color: var(--first-color)}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
