--- a/src/main/webapp/assets/css/cards.css
+++ b/src/main/webapp/assets/css/cards.css
@@ -12,6 +12,7 @@
 }
 #cards_landscape_wrap-2 .card-flyer {
   border-radius: 10px;
+  cursor: pointer;
 }
 #cards_landscape_wrap-2 .card-flyer .image-box {
   background: #ffffff;
@@ -82,6 +83,7 @@
   text-align: left;
   letter-spacing: 1px;
   color: #1f2225;
+  word-wrap: break-word;
 }
 
 td {
@@ -89,7 +91,6 @@ td {
   font-weight: 500;
   border-radius: 10px;
   color: #555555;
-  padding-right: 45px;
 }
 
 p {
@@ -139,7 +140,7 @@ p {
   margin: 0;
 }
 
-#memberList li {
+#memberList li, customli {
   border: 0px;
   border-bottom: 2px solid #ddd;
   margin-top: -1px; 
