--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="assets/js/jquery/jquery.min.js"></script>
-    <script src="assets/js/checkuser.js"></script>
+    <!-- <script src="assets/js/checkuser.js"></script> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
+    <link rel="stylesheet" href="assets/css/cards.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -24,11 +25,12 @@
 
 <body id="body-pd">
     <header class="header" id="header">
+        <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
-            <h3>Projects</h3>
+            <h3>Project Manager</h3>
         </div>
-        <div class="profile_img">
-            <!-- <img src='assets/icons/profile.png' style='width: 50px;height: 50px;vertical-align: middle' /> -->
+        <div class="profile_img" id="profile_img">
+            <!-- <img src='assets/icons/profile.png' /> -->
             A
         </div>
     </header>
@@ -36,9 +38,10 @@
         <nav class="nav">
             <div>
                 <a href="#" class="nav_logo">
-                    <i class='bx bx-menu nav_logo-icon' id="header-toggle"></i>
+                    <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
+                    <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
                     <span class="nav_logo-name">
-                        <img width="37px" src="assets/icons/icon.png" alt="project_management">
+                        Projects
                     </span>
                 </a>
                 <div class="nav_list"> <a href="#" class="nav_link">
@@ -65,21 +68,211 @@
         </nav>
     </div>
 
-    <div class="container mt-2">
+    <div class="container" style="margin-top: 70px">
         <h3>Projects</h3>
     </div>
     <div class="clearfix"></div>
     <br />
-    <div class="row">
 
+    <div hidden id="members">
+        <div class="popover-heading">
+            Marksheet Manager
+        </div>
+        <div class="popover-body">
+            <div class="row mb-3">
+                <div class="col-6">
+                    <button class="btn btn-primary" id="editBtn" style="width:100%">Edit</button>
+                </div>
+                <div class="col-6">
+                    <button class="btn btn-danger" id="deleteBtn" style="width:100%">Delete</button>
+                </div>
+            </div>
+            <div class="form-group has-search mb-3">
+                <span class="fa fa-search form-control-search"></span>
+                <input type="text" class="form-control" onkeyup="myFunction(this)" placeholder="Search">
+            </div>
+
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Members</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group" id="memberList">
+                        <li class="member">Adele</li>
+                        <li class="member">Bob</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
-    <script src="assets/js/jquery/jquery.min.js"></script>
-    <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+
+
+    <!-- Projects Cards -->
+    <div id="cards">
+        <div id="cards_landscape_wrap-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                        <a data-popover-content="#members" data-toggle="popover" data-trigger="focus">
+                            <div class="card-flyer">
+                                <div class="text-box">
+                                    <div class="text-container" style="margin:5px">
+                                        <input type="text" hidden id="project_id">
+                                        <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet
+                                            Manager
+                                        </h4>
+                                        <p class="text-muted text-start">15 open tasks</p>
+                                        <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                            industry.
+                                            Lorem
+                                            Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                        <table class="mt-6">
+                                            <tr>
+                                                <td>Created</td>
+                                                <td>05/11/2222</td>
+                                            </tr>
+                                            <tr>
+                                                <td style="padding-right:40px">Owner</td>
+                                                <td>Admin</td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td>Priority:</td>
+                                                <td class="priority-l"><img src="assets/icons/low.png" />&nbsp;Low</td>
+                                            </tr> -->
+                                            <tr>
+                                                <td>Team</td>
+                                                <td>5 Employee</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modals -->
+
+
+    <!-- Edit Modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Edit Project</h5>
+                    <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form name="edit-project" id="edit-project">
+                        <div class="mb-3">
+                            <label for="ename">Name</label>
+                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="nameHelp"
+                                placeholder="Enter Project Name" required />
+                        </div>
+                        <div class="mb-3">
+                            <label for="edesc">Description</label>
+                            <textarea class="form-control" id="edesc" name="edesc" aria-describedby="edescHelp" rows="3"
+                                placeholder="Enter Description atleast 20 characters" required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="eownerList">Owner Name</label>
+                            <select class="form-control" id="eownerList" name="eownerList"
+                                aria-label=".form-select-lg example">
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="members" id="members">Members</label>
+                            <div class="form-group has-search mb-3 mt-1">
+                                <span class="fa fa-search form-control-search"></span>
+                                <input type="text" class="form-control" onkeyup="memberFilter(this)" placeholder="Search">
+                            </div>
+                            <ul class="list-group" id="editMemberList">
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" id="group1" type="checkbox" value=""
+                                        aria-label="...">
+                                    <label for="group1">Main List</label>
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Second checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Third checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fourth checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fifth checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fourth checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fifth checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fourth checkbox
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                    Fifth checkbox
+                                </li>
+                            </ul>
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Modal end -->
+    <!-- Confirm Modal -->
+    <div id="deleteModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+            <div class="modal-content">
+                <div class="modal-header flex-column">
+                    <div class="icon-box">
+                        <i class="fas fa-times-circle"></i>
+                    </div>
+                    <h4 class="modal-title w-100">Are you sure?</h4>
+                </div>
+                <form id="delete-task" name="delete-task">
+
+                    <div class="modal-body">
+                        <p>Do you really want to delete these records? This process cannot be undone.</p>
+                    </div>
+
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/api_utility.js"></script>
     <script src="assets/js/projects.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
 </body>
