--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -11,22 +11,26 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
+    <link rel="stylesheet" href="assets/css/cards.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
+    <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
 </head>
 
 <body id="body-pd">
     <header class="header" id="header">
+        <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
-            <h3>Admin</h3>
+            <h3>Project Manager</h3>
         </div>
-        <div class="profile_img">
-            <!-- <img src='assets/icons/profile.png' style='width: 50px;height: 50px;vertical-align: middle' /> -->
+        <div class="profile_img" id="profile_img">
+            <!-- <img src='assets/icons/profile.png' /> -->
             A
         </div>
     </header>
@@ -34,16 +38,17 @@
         <nav class="nav">
             <div>
                 <a href="#" class="nav_logo">
-                    <i class='bx bx-menu nav_logo-icon' id="header-toggle"></i>
-                    <span class="nav_logo-name"><img width="37px" src="assets/icons/icon.png"
-                            alt="project_management"></span>
+                    <!-- <i class='bx bx-menu nav_logo-icon' id="header-toggle1"></i> -->
+                    <img style="margin-left:-5px" width="30px" src="assets/icons/icon.png" alt="project_management">
+                    <span class="nav_logo-name">
+                        Projects
+                    </span>
                 </a>
-                <div class="nav_list">
-                    <a href="#" class="nav_link">
+                <div class="nav_list"> <a href="admin" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="admin" class="nav_link active">
+                    <a href="admin_users" class="nav_link">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
                     <a href="admin_projects" class="nav_link">
@@ -56,169 +61,25 @@
                     </a>
                 </div>
             </div>
-            <a href="#" onclick="logout()" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
+            <a href="#" onclick="logout()" class="nav_link">
+                <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">SignOut</span>
             </a>
         </nav>
     </div>
-    <div class="container mt-1" id="users">
-        <div class="float-left">
-            <h3>Users</h3>
-        </div>
-        <div class="row">
-            <div class="mt-5 mb-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
-                    <i class="fa fa-add"></i>Add User
-                </button>
-            </div>
-            <div class="col-md-12">
-                <table id="usersTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>uid</th>
-                            <th>SNo</th>
-                            <th>Username</th>
-                            <th>E-Mail</th>
-                            <th>Role</th>
-                            <th>Joined</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
 
-                    <tbody id="tbody">
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <div class="container" style="margin-top: 70px">
+        <h3>Dashboard</h3>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="formModalLabel">Add User</h5>
-                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
-                </div>
-                <form name="add-user" id="add-user">
-                    <div class="modal-body">
-                        <div class="mb-3">
-                            <label for="name">Username</label>
-                            <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp"
-                                placeholder="Enter username" required />
-                            <div id="nameHelp" hidden class="form-text">* Enter atleast 3 characters.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" name="email" aria-describedby="email"
-                                placeholder="Enter email" required />
-                            <div id="emailHelp" hidden class="form-text">* Enter valid email.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" id="password" class="form-control"
-                                aria-describedby="passwordHelpBlock"
-                                placeholder="Enter password with small, capital and special character" required>
-                            <div id="passwordHelp" hidden class="form-text">
-                                Your password must contain letters, numbers, special characters.
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="role">Role</label>
-                            <br />
-                            <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
-                                <option value="employee" selected>Employee</option>
-                                <option value="manager">Manager</option>
-                                <option value="admin">Admin</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                            Close
-                        </button>
-                        <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Modal end -->
-    <!-- Edit Modal -->
-    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formEditModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="formModalLabel">Edit User</h5>
-                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="edit-user" name="edit-user">
-                        <div class="mb-3">
-                            <label for="name">Username</label>
-                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="enameHelp"
-                                placeholder="Enter username" required />
-                        </div>
-                        <div class="mb-3">
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="eemail" name="eemail"
-                                aria-describedby="eemailHelp" placeholder="Enter email" required />
-                        </div>
-                        <div class="mb-3">
-                            <label for="role">Role</label>
-                            <br />
-                            <select class="form-control" id="erole" name="erole" aria-label=".form-select-lg example">
-                                <option value="employee" selected>Employee</option>
-                                <option value="manager">Manager</option>
-                                <option value="admin">Admin</option>
-                            </select>
-                        </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                        Close
-                    </button>
-                    <input type="submit" id="esubmit" class="btn btn-primary" value="Update" />
-                </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Modal end -->
+    <div class="clearfix"></div>
+    <br />
 
-    <!-- Confirm Modal -->
-    <div id="deleteModal" class="modal fade">
-        <div class="modal-dialog modal-confirm">
-            <div class="modal-content">
-                <div class="modal-header flex-column">
-                    <div class="icon-box">
-                        <i class="fas fa-times-circle"></i>
-                    </div>
-                    <h4 class="modal-title w-100">Are you sure?</h4>
-                </div>
-                <form id="delete-task" name="delete-task">
 
-                    <div class="modal-body">
-                        <p>Do you really want to delete these records? This process cannot be undone.</p>
-                    </div>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 
-                    <div class="modal-footer justify-content-center">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-    </div>
-    <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
-    <script src="assets/js/validator.js"></script>
-    <script src="assets/js/admin.js"></script>
-    <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
-    <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
+    <script src="assets/js/api_utility.js"></script>
 </body>
 
 </html>
