--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -44,11 +44,11 @@
                         Projects
                     </span>
                 </a>
-                <div class="nav_list"> <a href="#" class="nav_link">
+                <div class="nav_list"> <a href="admin" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="admin" class="nav_link">
+                    <a href="admin_users" class="nav_link">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
                     <a href="admin_projects" class="nav_link active">
@@ -107,7 +107,7 @@
         <div id="cards_landscape_wrap-2">
             <div class="container">
                 <div class="row" id="cards">
-                    
+
                 </div>
             </div>
         </div>
@@ -151,43 +151,7 @@
                                     placeholder="Search">
                             </div>
                             <ul class="list-group" id="editMemberList">
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" id="group1" type="checkbox" value=""
-                                        aria-label="...">
-                                    <label for="group1">Main List</label>
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Second checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Third checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fourth checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fifth checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fourth checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fifth checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fourth checkbox
-                                </li>
-                                <li class="list-group-item">
-                                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                                    Fifth checkbox
-                                </li>
+
                             </ul>
                         </div>
                 </div>
@@ -227,7 +191,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -235,8 +199,6 @@
     <script src="assets/js/api_utility.js"></script>
     <script src="assets/js/project_utility.js"></script>
     <script src="assets/js/projects.js"></script>
-    <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
-    <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
 </body>
 
 </html>
