--- a/src/main/webapp/template/admin_users.html
+++ b/src/main/webapp/template/admin_users.html
@@ -220,4 +220,8 @@
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/admin.js"></script>
-    <script src="as
+    <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
+    <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
+</body>
+
+</html>
